ec2.tf
# This file contains the configuration for creating a public EC2 instance in AWS using Terraform.
resource "aws_instance" "public" {
  ami                         = data.aws_ami.amazon2023.id
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.public_subnets[0].id  # Use the first public subnet directly
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.allow_ssh.id]
 key_name      = aws_key_pair.bastion_key.key_name  # Link key pair
  user_data_replace_on_change = true # this forces instance to be recreated upon update of user data contents

  depends_on = [aws_subnet.public_subnets, aws_security_group.allow_ssh]

    lifecycle {
    create_before_destroy = true  # Ensures a new instance is created first before old one is removed
  }

  tags = {
    Name = "${var.myname}-bastion" #Change to a name you would want your ec2 to be called
  }
}

# This resource is used to create a default EC2 instance metadata options
resource "aws_ec2_instance_metadata_defaults" "enforce-imdsv2" {
  http_tokens = "optional"
}

resource "aws_instance" "private" {
  ami                         = data.aws_ami.amazon2023.id
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.private_subnets[0].id  # Use the first private subnet directly
  associate_public_ip_address = false
  vpc_security_group_ids      = [aws_security_group.webhost_sg.id]
 key_name      = aws_key_pair.private_key.key_name  # Link key pair
  #iam_instance_profile        = aws_iam_instance_profile.example.name
  user_data                   = <<EOF
#!/bin/bash 
yum update -y 
yum install httpd -y 
echo "<h1>Hello from Instance $(curl -s 
http://169.254.169.254/latest/meta-data/instance-id)</h1>" | sudo tee 
/var/www/html/index.html 
systemctl start httpd 
systemctl enable httpd 
EOF 
  user_data_replace_on_change = true # this forces instance to be recreated upon update of user data contents

  depends_on = [aws_subnet.private_subnets, aws_security_group.webhost_sg]

  tags = {
    Name = "${var.myname}_tf-ec2-web" #Change to a name you would want your ec2 to be called
  }
}
